--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.3",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
